syntax = "proto3";

option go_package = "roguedb-open-source/protos";
package rogue.benchmarks;

message Dummy
{
    uint64 id = 1; //index-1
    string field1 = 2;
    string field2 = 3;
    string field3 = 4;
    string field4 = 5;
    string field5 = 6;
    string field6 = 7;
    string field7 = 8;
    string field8 = 9;
    string field9 = 10;
    string field10 = 11;
}